log.txt
echo build mode: debug
build mode: debug
mkdir -p /data/git/C-Hacker/testout/
mkdir -p /data/git/C-Hacker/binary/debug/checks/
gcc -x c -E -fPIC -g -Og -o /data/git/C-Hacker/binary/debug/checks/c-hacker-checks.o.c /data/git/C-Hacker/src/checks/c-hacker-checks-.c
cp -T /data/git/C-Hacker/src/checks/c-hacker-checks-.c_ /data/git/C-Hacker/binary/debug/checks/c-hacker-checks.o.c.c
remove-diamond-lines < /data/git/C-Hacker/binary/debug/checks/c-hacker-checks.o.c >> /data/git/C-Hacker/binary/debug/checks/c-hacker-checks.o.c.c
gcc -x c -c -fPIC -g -Og -o /data/git/C-Hacker/binary/debug/checks/c-hacker-checks.o /data/git/C-Hacker/binary/debug/checks/c-hacker-checks.o.c.c
/data/git/C-Hacker/binary/debug/checks/c-hacker-checks.o.c.c:38:1: error: conflicting types for ‘__sigset_t’; have ‘struct <anonymous>’
   38 | __sigset_t;
      | ^~~~~~~~~~
In file included from /usr/include/bits/types/sigset_t.h:4,
                 from /usr/include/sys/select.h:33,
                 from /usr/include/sys/types.h:179,
                 from /usr/include/stdlib.h:395,
                 from /data/git/C-Hacker/binary/debug/checks/c-hacker-checks.o.c.c:11:
/usr/include/bits/types/__sigset_t.h:8:3: note: previous declaration of ‘__sigset_t’ with type ‘__sigset_t’
    8 | } __sigset_t;
      |   ^~~~~~~~~~
make: *** [Makefile:99: /data/git/C-Hacker/binary/debug/checks/c-hacker-checks.o] Error 1
